src/snapshots/bvr__tui__tests__e2e_journey_narrow_geometry_stress.snap
---
source: src/tui.rs
expression: artifact
---
=== E2E Journey: narrow-geometry-stress | 40x15 ===

--- Step 1: narrow_main ---
bvr 1 Main b Board i In  | 3/3 | all
┌Issues [focu┐┌Details─────────────────┐
│            ││                        │
│ ▸ T ●open  ││ T A  Root  (C copy id) │
│   T ●open  ││ Status: open | Priorit │
│   T ✔done  ││ Assignee: alice | Repo │
│            ││ Created: 2026-01-01 |  │
│            ││ Closed: n/a | Labels:  │
│            ││                        │
│            ││ Triage Snapshot:       │
│            ││   open blockers: 0 (no │
│            ││   unblocks: 1 (B)      │
│            ││                        │
└────────────┘└────────────────────────┘
b/i/g/h modes | / search | s default

--- Step 2: narrow_board ---
bvr 1 Main b Board i In  | 3/3 | all
┌Board Lanes ┐┌Board Focus─────────────┐
│            ││                        │
│ Grouping:  ││ ┌───────────────────── │
│            ││ │  o T A p0            │
│ Lanes (5)  ││ │ Root                 │
│            ││ ├───────────────────── │
│ > open     ││ │ Lane: open           │
│     ▶ o A  ││ │ Assignee: alice      │
│       o B  ││ │ Top-level issue that │
│            ││ └───────────────────── │
│   in_progr ││                        │
│            ││                        │
└────────────┘└────────────────────────┘
Board mode: lane counts, queued IDs, and

--- Step 3: narrow_board_nav ---
bvr 1 Main b Board i In  | 3/3 | all
┌Board Lanes ┐┌Board Focus─────────────┐
│            ││                        │
│   open     ││ ┌───────────────────── │
│       o A  ││ │  x T C p0            │
│       o B  ││ │ Closed               │
│            ││ ├───────────────────── │
│   in_progr ││ │ Lane: closed         │
│     (empty ││ │ Assignee:            │
│            ││ └───────────────────── │
│   blocked  ││                        │
│     (empty ││                        │
│            ││                        │
└────────────┘└────────────────────────┘
Board mode: lane counts, queued IDs, and

--- Step 4: narrow_graph ---
bvr 1 Main b Board i In g Graph  | 3/3 |
┌Graph View [focus]────────────────────┐
│                                      │
│ Graph: nodes=3 edges=1 cycles=0 acti │
│ Focus: node 3/3 -> C (Closed)        │
│ Focused edge: list focus (Tab to ins │
│                                      │
│                   ╔═════════════════ │
│                   ║[x T p0] C        │
│                   ║Closed            │
│                   ║up:0 down:0       │
│                   ╚═════════════════ │
│                                      │
└──────────────────────────────────────┘
h/l nodes | j/k nodes | H/L jump

--- Step 5: narrow_insights ---
bvr 1 Main b Board i In  | 3/3 | all
┌Insight Queu┐┌Insight Detail──────────┐
│            ││                        │
│ [Bottlenec ││ Analytics Cockpit      │
│            ││ System Radar | bottlen │
│ Signal Til ││                        │
│ [Flow ] op ││ Focus: C (Closed)      │
│ [Risk ] bo ││ Status: closed | Prior │
│            ││                        │
│ Outlier Ra ││ Metric Strip           │
│ [Lead ] bo ││ [Rank ] pagerank=0.259 │
│ [Rank ] in ││ [HITS ] hub=0.0000 aut │
│            ││                        │
└────────────┘└────────────────────────┘
Insights [bottlenecks] | s/S panel | e e

--- Step 6: narrow_insights_cycle ---
bvr 1 Main b Board i In  | 3/3 | all
┌Insight Queu┐┌Insight Detail──────────┐
│            ││                        │
│ [Keystones ││ Analytics Cockpit      │
│            ││ System Radar | bottlen │
│ Signal Til ││                        │
│ [Flow ] op ││ Focus: C (Closed)      │
│ [Risk ] bo ││ Status: closed | Prior │
│            ││                        │
│ Outlier Ra ││ Metric Strip           │
│ [Lead ] bo ││ [Rank ] pagerank=0.259 │
│ [Rank ] in ││ [HITS ] hub=0.0000 aut │
│            ││                        │
└────────────┘└────────────────────────┘
Insights [keystones] | s/S panel | e exp

--- Step 7: narrow_actionable ---
bvr 1 Main b Board i In a Act  | 3/3 | a
┌Execution Tr┐┌Track Detail────────────┐
│            ││                        │
│ ⚡ ACTIONA ││ TRACK 1                │
│ RECOMMENDE ││ completing A unblocks  │
│            ││ 1 actionable item      │
│ ▸ TRACK 1  ││                        │
│   1 item   ││ ▸ A  score 0.695       │
│    └─ A    ││   Root                 │
│            ││   Unblocks: B          │
│            ││   Claim: br update A - │
│            ││                        │
│            ││                        │
└────────────┘└────────────────────────┘
Actionable: 1 tracks, 1 items | j/k navi

--- Step 8: narrow_tree ---
bvr 1 Main b Board i In T Tree  | 3/3 |
┌Dependency T┐┌Issue Detail────────────┐
│            ││                        │
│ Dependency ││ ID: A                  │
│            ││ Title: Root            │
│ > [-] (o)  ││ Status: open           │
│    |   `-  ││ Type: task             │
│       (x)  ││ Depth: 0               │
│            ││ Labels: core, parity   │
│            ││                        │
│            ││ Dependents (1):        │
│            ││   B - Dependent        │
│            ││                        │
└────────────┘└────────────────────────┘
Tree: 3 nodes | j/k navigate | Enter exp

--- Step 9: narrow_main_return ---
bvr 1 Main b Board i In  | 3/3 | all
┌Issues [focu┐┌Details─────────────────┐
│            ││                        │
│   T ●open  ││ T C  Closed  (C copy i │
│   T ●open  ││ Status: closed | Prior │
│ ▸ T ✔done  ││ Assignee: unassigned | │
│            ││ Created: 2026-01-01 |  │
│            ││ Closed: 2026-01-06 | L │
│            ││                        │
│            ││ Triage Snapshot:       │
│            ││   open blockers: 0 (no │
│            ││   unblocks: 0 (none)   │
│            ││                        │
└────────────┘└────────────────────────┘
b/i/g/h modes | / search | s default
