src/snapshots/bvr__tui__tests__snap_actionable_detail_focus.snap
---
source: src/tui.rs
assertion_line: 22221
expression: text
---
bvr 1 Main b Board i Insights a Actionable | mode=Actionable | focus=detail | issues=3/3 | filter=al
┌Execution Tracks────────────────────────┐┌Track Detail [focus]────────────────────────────────────┐
│                                        ││                                                        │
│ ⚡ ACTIONABLE ITEMS | 1 items in 1 tra ││ TRACK 1                                                │
│ RECOMMENDED: Start with A -> highest i ││ completing A unblocks 1 issue(s)                       │
│                                        ││ 1 actionable item                                      │
│   TRACK 1 | completing A unblocks 1 is ││                                                        │
│   1 item                               ││ ▸ A  score 0.692                                       │
│   ▸└─ P0 A             0.69  Root → B  ││   Root                                                 │
│                                        ││   Unblocks: B                                          │
│                                        ││   Claim: br update A --status=in_progress              │
│                                        ││                                                        │
│                                        ││ Highest impact: A                                      │
│                                        ││ Impact detail: highest impact: A (score 0.69, unblocks │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Actionable: 1 tracks, 1 items | j/k navigate | Tab focus | a/Esc back
