src/snapshots/bvr__tui__tests__snap_actionable_medium.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights a Actionable | mode=Actionable | focus=list | issues=3/3 | filter=all
┌Execution Tracks [focus]────────────────┐┌Track Detail────────────────────────────────────────────┐
│                                        ││                                                        │
│ (no execution plan computed)           ││ (no plan)                                              │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Actionable: 0 tracks, 0 items | j/k navigate | Tab focus | a/Esc back
