src/snapshots/bvr__tui__tests__snap_actionable_narrow.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i In g Graph h Hist a Act  | 3/3 | all
┌Execution Tracks [f┐┌Track Detail─────────────────────────┐
│                   ││                                     │
│ (no execution pla ││ (no plan)                           │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
└───────────────────┘└─────────────────────────────────────┘
Actionable: 0 tracks, 0 items │ j/k navigate │ Tab focus
