src/snapshots/bvr__tui__tests__snap_actionable_wide.snap
---
source: src/tui.rs
expression: text
---
bvr | mode=Actionable | focus=list | issues=3/3 | filter=all | sort=default | ? help | Tab focus |
┌Execution Tracks [focus]───────────────────────────┐┌Track Detail─────────────────────────────────────────────────────────────────────────┐
│                                                   ││                                                                                     │
│ (no execution plan computed)                      ││ (no plan)                                                                           │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
│                                                   ││                                                                                     │
└───────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────┘
Actionable: 0 tracks, 0 items | j/k navigate | Tab focus | a/Esc back
