src/snapshots/bvr__tui__tests__snap_after_board_search.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights | mode=Board | focus=list | issues=3/3 | filter=all |
┌Board Lanes [focus]─────────────────────┐┌Board Focus─────────────────────────────────────────────┐
│                                        ││                                                        │
│ Grouping: status (s cycles) | Empty: A ││ ┌────────────────────────────────────────┐             │
│ Search: /B (n/N cycles)                ││ │  o T B p0                              │             │
│ Matches: 1/1                           ││ │ Dependent                              │             │
│                                        ││ ├────────────────────────────────────────┤             │
│ Lanes (5) | 3 issues total             ││ │ Lane: open                             │             │
│                                        ││ │ Assignee:                              │             │
│ > open         [  2] ██                ││ │ Depends on A and should report block…  │             │
│       o A          p0 Root             ││ └────────────────────────────────────────┘             │
│     ▶ o B          p0 Dependent        ││                                                        │
│                                        ││ Depends on (1)                                         │
│   in_progress  [  0]                   ││   o A [OPEN]                                           │
│     (empty)                            ││                                                        │
│                                        ││ Blocked by 1 open issue(s).                            │
│   blocked      [  0]                   ││                                                        │
│     (empty)                            ││                                                        │
│                                        ││                                                        │
│   closed       [  1] █                 ││                                                        │
│       x C          p0 Closed           ││                                                        │
│                                        ││                                                        │
│   other        [  0]                   ││                                                        │
│     (empty)                            ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Board mode: lane counts, queued IDs, and selected issue delivery context | grouping=status (s cycles
