src/snapshots/bvr__tui__tests__snap_after_insights_panel_cycle.snap
---
source: src/tui.rs
expression: text
---
bvr | mode=Insights | focus=list | issues=3/3 | filter=all | sort=default | ? help | Tab focus |
┌Insight Queue [focus]───────────────────┐┌Insight Detail──────────────────────────────────────────┐
│                                        ││                                                        │
│ [Influencers (PageRank)] s/S cycles pa ││ Analytics Cockpit                                      │
│                                        ││ System Radar | bottlenecks=2 crit-path=3 cycles=0 cut- │
│ Signal Tiles                           ││                                                        │
│ [Flow ] open=2 blocked=1 crit-path=3 c ││ Focus: A (Root)                                        │
│ [Risk ] bottlenecks=2 cut-points=0 zer ││ Status: open | Priority: p0                            │
│                                        ││                                                        │
│ Outlier Radar                          ││ Metric Strip                                           │
│ [Lead ] bottleneck=A score=0.481 block ││ [Rank ] pagerank=0.4805 betweenness=0.0000 eigenvector │
│ [Rank ] influencer=A pr=0.4805         ││ [HITS ] hub=0.0000 authority=1.0000 k-core=1           │
│ [Act  ] next-priority=A score=0.695 p0 ││ [Risk ] crit-depth=2 slack=0.0000 cut-point=no         │
│                                        ││ [Flow ] blockers=0 dependents=1 crit-path=yes cycle=no │
│ Panel Focus | Influencers (PageRank) | ││ [Lead ] top-bottleneck=yes                             │
│                                        ││                                                        │
│  1. A            [#########........... ││ All Metrics:                                           │
│  2. B            [#####............... ││   PageRank:     0.4805                                 │
│  3. C            [#####............... ││   Betweenness:  0.0000                                 │
│                                        ││   Eigenvector:  1.0000                                 │
│                                        ││   Hub (HITS):   0.0000                                 │
│                                        ││   Auth (HITS):  1.0000                                 │
│                                        ││   K-core:       1                                      │
│                                        ││   Crit depth:   2                                      │
│                                        ││   Slack:        0.0000                                 │
│                                        ││   Cut point:    no                                     │
│                                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Insights [influencers] | s/S panel | e explanations=on | x proof=off
