src/snapshots/bvr__tui__tests__snap_board_medium.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i Insights | mode=Board | focus=list | issues=3/3 | filter=all |
┌Board Lanes [focus]─────────────────────┐┌Board Focus─────────────────────────────────────────────┐
│                                        ││                                                        │
│ Grouping: status (s cycles) | Empty: A ││ ┌────────────────────────────────────────┐             │
│                                        ││ │  o T A p0                              │             │
│ Lanes (5) | 3 issues total             ││ │ Root                                   │             │
│                                        ││ ├────────────────────────────────────────┤             │
│ ▸ ┌─ open [2] ██  clear                ││ │ Lane: open                             │             │
│   ▶ oT P0 A Root↓1 @alice              ││ │ Assignee: alice                        │             │
│   │ oT P0 B Dependent⊘1                ││ │ Labels: core, parity                   │             │
│   └────────────                        ││ │ Age: 85d | Updated: 84d ago            │             │
│                                        ││ │ PR:0.481 Depth:2                       │             │
│   ┌─ in_progress [0]   empty           ││ ├────────────────────────────────────────┤             │
│   │ (empty)                            ││ │ Top-level issue that unblocks downst…  │             │
│   └────────────                        ││ └────────────────────────────────────────┘             │
│                                        ││                                                        │
│   ┌─ blocked [0]   empty               ││ Unblocks (1)                                           │
│   │ (empty)                            ││   o B                                                  │
│   └────────────                        ││                                                        │
│                                        ││ Ready to advance to next lane.                         │
│   ┌─ closed [1] █  clear               ││                                                        │
│   │ xT P0 C Closed                     ││                                                        │
│   └────────────                        ││                                                        │
│                                        ││                                                        │
│   ┌─ other [0]   empty                 ││                                                        │
│   │ (empty)                            ││                                                        │
│   └────────────                        ││                                                        │
│                                        ││                                                        │
└────────────────────────────────────────┘└────────────────────────────────────────────────────────┘
Board mode: lane counts, queued IDs, and selected issue delivery context | Tab focus | / search | gr
