src/snapshots/bvr__tui__tests__snap_board_narrow.snap
---
source: src/tui.rs
expression: text
---
bvr 1 Main b Board i In g Graph h Hist  | 3/3 | all
┌Board Lanes [focus]┐┌Board Focus──────────────────────────┐
│                   ││                                     │
│ Grouping: status  ││ ┌────────────────────────────────── │
│                   ││ │  o T A p0                         │
│ Lanes (5) | 3 iss ││ │ Root                              │
│                   ││ ├────────────────────────────────── │
│ > open         [  ││ │ Lane: open                        │
│     ▶ o A         ││ │ Assignee: alice                   │
│       o B         ││ │ Top-level issue that unblocks dow │
│                   ││ └────────────────────────────────── │
│   in_progress  [  ││                                     │
│     (empty)       ││ Unblocks (1)                        │
│                   ││   o B                               │
│   blocked      [  ││                                     │
│     (empty)       ││ Ready to advance to next lane.      │
│                   ││                                     │
│   closed       [  ││                                     │
│       x C         ││                                     │
│                   ││                                     │
│   other        [  ││                                     │
│     (empty)       ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
│                   ││                                     │
└───────────────────┘└─────────────────────────────────────┘
Board mode: lane counts, queued IDs, and selected issue deli
